--- a/lang/es.json
+++ b/lang/es.json
@@ -7,6 +7,7 @@
   "MYTHRAS.Character": "Personaje",
   "MYTHRAS.Combat": "Combate",
   "MYTHRAS.Abilities": "Capacidades",
+  "MYTHRAS.Spells": "Hechizos",
   "MYTHRAS.Equipment": "Equipo",
   "MYTHRAS.Journal": "Diario",
   "MYTHRAS.Information": "Información",
@@ -93,8 +94,10 @@
   "MYTHRAS.Professional_Skills": "Habilidades Profesionales",
   "MYTHRAS.Combat_Styles": "Estilos de Combate",
   "MYTHRAS.Magic_Skills": "Habilidades Mágicas",
+  "MYTHRAS.Magic_Skill": "Habilidad Mágica",
   "MYTHRAS.Passions": "Pasiones",
   "MYTHRAS.New_professionalSkill": "Nueva Habilidad Profesional",
+  "MYTHRAS.Source": "Fuente",
   "MYTHRAS.New_combatStyle": "Nuevo Estilo de Combate",
   "MYTHRAS.New_magicSkill": "Nueva Habilidad Mágica",
   "MYTHRAS.New_passion": "Nueva Pasión",
@@ -190,5 +193,42 @@
   "MYTHRAS.FUMBLE!": "¡Pifia!",
   "MYTHRAS.FAILURE!": "¡Fallo!",
   "MYTHRAS.SUCCESS!": "¡Éxito!",
-  "MYTHRAS.CRITICAL!": "¡Crítico!"
+  "MYTHRAS.CRITICAL!": "¡Crítico!",
+  "MYTHRAS.Carried": "Portado",
+  "MYTHRAS.Storage": "Contenedor",
+  "MYTHRAS.Storages": "Contenedores",
+  "MYTHRAS.New_storage": "Nuevo Contenedor",
+  "MYTHRAS.No_Storage": "Equipado",
+  "MYTHRAS.Max_ENC": "Max. Car",
+  "MYTHRAS.Max_Encumbrance": "Max. Carga",
+  "MYTHRAS.Cult_Brotherhood": "Culto/Hermandad",
+  "MYTHRAS.Cults_Brotherhoods": "Cultos y Hermandades",
+  "MYTHRAS.Rank": "Rango",
+  "MYTHRAS.Ranks": "Rangos",
+  "MYTHRAS.Rank_Name0": "Miembro Común",
+  "MYTHRAS.Rank_Name1": "Miembro Dedicado",
+  "MYTHRAS.Rank_Name2": "Miembro Probado",
+  "MYTHRAS.Rank_Name3": "Supervisor",
+  "MYTHRAS.Rank_Name4": "Líder",
+  "MYTHRAS.Current_Rank": "Rango Actual",
+  "MYTHRAS.Create": "Crear",
+  "MYTHRAS.New_cultBrotherhood": "Culto/Hermandad",
+  "MYTHRAS.Magic_Skill_Type": "Tipo Habilidad Mágica",
+  "MYTHRAS.Folk_Magic": "Magia Común",
+  "MYTHRAS.Trance": "Trance",
+  "MYTHRAS.Binding": "Atadura",
+  "MYTHRAS.Meditation": "Meditación",
+  "MYTHRAS.Mysticism": "Misticismo",
+  "MYTHRAS.Invocation": "Invocación",
+  "MYTHRAS.Shaping": "Manipulación",
+  "MYTHRAS.Devotion": "Devoción",
+  "MYTHRAS.Exhort": "Exhortación",
+  "MYTHRAS.Intensity": "Intensidad",
+  "MYTHRAS.Magnitude": "Magnitud",
+  "MYTHRAS.Spirits_Bounded": "Espíritus Atados",
+  "MYTHRAS.Spirit_Bounded_Pow": "POD Espíritu Atado",
+  "MYTHRAS.Combined_Talent_Intensity": "Intensidad Acumulada",
+  "MYTHRAS.Shaping_Points": "Puntos Manipulación",
+  "MYTHRAS.Devotional_Pool": "Reserva Devocional",
+  "MYTHRAS.Maximums": "Máximos"
 }
