--- a/lang/en.json
+++ b/lang/en.json
@@ -1,194 +1,1 @@
-{
-  "MYTHRAS.CHARACTER_NAME": "CHARACTER NAME",
-  "MYTHRAS.PLAYER_NAME": "PLAYER NAME",
-  "MYTHRAS.LUCK_POINTS": "LUCK POINTS",
-  "MYTHRAS.MAGIC_POINTS": "MAGIC POINTS",
-  "MYTHRAS.EXPERIENCE_ROLLS": "EXPERIENCE ROLLS",
-  "MYTHRAS.Character": "Character",
-  "MYTHRAS.Combat": "Combat",
-  "MYTHRAS.Abilities": "Abilities",
-  "MYTHRAS.Equipment": "Equipment",
-  "MYTHRAS.Journal": "Journal",
-  "MYTHRAS.Information": "Information",
-  "MYTHRAS.CAREER": "CAREER",
-  "MYTHRAS.SOCIAL_CLASS": "SOCIAL CLASS",
-  "MYTHRAS.GENDER": "GENDER",
-  "MYTHRAS.HANDEDNESS": "HANDEDNESS",
-  "MYTHRAS.HOMELAND": "HOMELAND",
-  "MYTHRAS.CULTURE": "CULTURE",
-  "MYTHRAS.AGE": "AGE",
-  "MYTHRAS.HEIGHT": "HEIGHT",
-  "MYTHRAS.WEIGHT": "WEIGHT",
-  "MYTHRAS.FRAME": "FRAME",
-  "MYTHRAS.Fatigue": "Fatigue",
-  "MYTHRAS.Fresh": "Fresh",
-  "MYTHRAS.Winded": "Winded",
-  "MYTHRAS.Tired": "Tired",
-  "MYTHRAS.Wearied": "Wearied",
-  "MYTHRAS.Exhausted": "Exhausted",
-  "MYTHRAS.Debilitated": "Debilitated",
-  "MYTHRAS.Incapacitated": "Incapacitated",
-  "MYTHRAS.Semi-Conscious": "Semi-Conscious",
-  "MYTHRAS.Comatose": "Comatose",
-  "MYTHRAS.Dead": "Dead",
-  "MYTHRAS.minrecovermsg": " Minutes until Fresh.",
-  "MYTHRAS.hoursrecovermsg": " Hours until Fresh.",
-  "MYTHRAS.Characteristics": "Characteristics",
-  "MYTHRAS.STRENGTH": "STRENGTH",
-  "MYTHRAS.CONSTITUTION": "CONSTITUTION",
-  "MYTHRAS.SIZE": "SIZE",
-  "MYTHRAS.DEXTERITY": "DEXTERITY",
-  "MYTHRAS.INTELLIGENCE": "INTELLIGENCE",
-  "MYTHRAS.POWER": "POWER",
-  "MYTHRAS.CHARISMA": "CHARISMA",
-  "MYTHRAS.STR": "STR",
-  "MYTHRAS.CON": "CON",
-  "MYTHRAS.SIZ": "SIZ",
-  "MYTHRAS.DEX": "DEX",
-  "MYTHRAS.INT": "INT",
-  "MYTHRAS.POW": "POW",
-  "MYTHRAS.CHA": "CHA",
-  "MYTHRAS.Attributes": "Attributes",
-  "MYTHRAS.ACTION_POINTS": "ACTION POINTS",
-  "MYTHRAS.DAMAGE_MOD": "DAMAGE MOD",
-  "MYTHRAS.EXPERIENCE_MOD": "EXPERIENCE MOD",
-  "MYTHRAS.HEALING_RATE": "HEALING RATE",
-  "MYTHRAS.INITIATIVE_BONUS": "INITIATIVE BONUS",
-  "MYTHRAS.POINTS": "POINTS",
-  "MYTHRAS.Movement": "Movement",
-  "MYTHRAS.WALK": "WALK",
-  "MYTHRAS.RUN": "RUN",
-  "MYTHRAS.SPRINT": "SPRINT",
-  "MYTHRAS.CLIMB": "CLIMB",
-  "MYTHRAS.H._JUMP": "H. JUMP",
-  "MYTHRAS.V._JUMP": "V. JUMP",
-  "MYTHRAS.SWIM": "SWIM",
-  "MYTHRAS.Skills": "Skills",
-  "MYTHRAS.Standard_Skills": "Standard Skills",
-  "MYTHRAS.Name": "Name",
-  "MYTHRAS.Base_Char": "Base Char",
-  "MYTHRAS.Roll": "Roll",
-  "MYTHRAS.Athletics": "Athletics",
-  "MYTHRAS.Boating": "Boating",
-  "MYTHRAS.Brawn": "Brawn",
-  "MYTHRAS.Conceal": "Conceal",
-  "MYTHRAS.Customs": "Customs",
-  "MYTHRAS.Dance": "Dance",
-  "MYTHRAS.Deceit": "Deceit",
-  "MYTHRAS.Drive": "Drive",
-  "MYTHRAS.Endurance": "Endurance",
-  "MYTHRAS.Evade": "Evade",
-  "MYTHRAS.First_Aid": "First Aid",
-  "MYTHRAS.Influence": "Influence",
-  "MYTHRAS.Insight": "Insight",
-  "MYTHRAS.Locale": "Locale",
-  "MYTHRAS.Native_Tongue": "Native Tongue",
-  "MYTHRAS.Perception": "Perception",
-  "MYTHRAS.Ride": "Ride",
-  "MYTHRAS.Sing": "Sing",
-  "MYTHRAS.Stealth": "Stealth",
-  "MYTHRAS.Swim": "Swim",
-  "MYTHRAS.Unarmed": "Unarmed",
-  "MYTHRAS.Willpower": "Willpower",
-  "MYTHRAS.Professional_Skills": "Professional Skills",
-  "MYTHRAS.Combat_Styles": "Combat Styles",
-  "MYTHRAS.Magic_Skills": "Magic Skills",
-  "MYTHRAS.Passions": "Passions",
-  "MYTHRAS.New_professionalSkill": "New Professional Skill",
-  "MYTHRAS.New_combatStyle": "New Combat Style",
-  "MYTHRAS.New_magicSkill": "New Magic Skill",
-  "MYTHRAS.New_passion": "New Passion",
-  "MYTHRAS.Hit_Locations": "Hit Locations",
-  "MYTHRAS.Armor_Penalty": "Armor Penalty",
-  "MYTHRAS.Location": "Location",
-  "MYTHRAS.Range": "Range",
-  "MYTHRAS.Armor": "Armor",
-  "MYTHRAS.AP": "AP",
-  "MYTHRAS.HP": "HP",
-  "MYTHRAS.Right_Leg": "Right Leg",
-  "MYTHRAS.Left_Leg": "Left Leg",
-  "MYTHRAS.Abdomen": "Abdomen",
-  "MYTHRAS.Chest": "Chest",
-  "MYTHRAS.Right_Arm": "Right Arm",
-  "MYTHRAS.Left_Arm": "Left Arm",
-  "MYTHRAS.Head": "Head",
-  "MYTHRAS.Resistances": "Resistances",
-  "MYTHRAS.Wounds_and_Conditions": "Wounds and Conditions",
-  "MYTHRAS.Traits": "Traits",
-  "MYTHRAS.New_melee-weapon": "New Melee Weapon",
-  "MYTHRAS.New_ranged-weapon": "New Ranged Weapon",
-  "MYTHRAS.New_armor": "New Armor",
-  "MYTHRAS.New_equipment": "New Equipment",
-  "MYTHRAS.New_currency": "New Currency",
-  "MYTHRAS.Weapons": "Weapons",
-  "MYTHRAS.Melee_Weapons": "Melee Weapons",
-  "MYTHRAS.Damage": "Damage",
-  "MYTHRAS.DM": "DM",
-  "MYTHRAS.Size": "Size",
-  "MYTHRAS.Reach": "Reach",
-  "MYTHRAS.AP/HP": "AP/HP",
-  "MYTHRAS.Ranged_Weapons": "Ranged Weapons",
-  "MYTHRAS.Force": "Force",
-  "MYTHRAS.Impale_Size": "Impale Size",
-  "MYTHRAS.Load": "Load",
-  "MYTHRAS.Ammo": "Ammo",
-  "MYTHRAS.Current_ENC": "Current ENC",
-  "MYTHRAS.Normal_Cap": "Normal Cap",
-  "MYTHRAS.Burdened_Cap": "Burdened Cap",
-  "MYTHRAS.Overloaded_Cap": "Overloaded Cap",
-  "MYTHRAS.Items": "Items",
-  "MYTHRAS.ENC": "ENC",
-  "MYTHRAS.Quantity": "Quantity",
-  "MYTHRAS.Currency_and_Wealth": "Currency and Wealth",
-  "MYTHRAS.Value": "Value",
-  "MYTHRAS.Equipped": "Equipped",
-  "MYTHRAS.Encumbrance": "Encumbrance",
-  "MYTHRAS.Armor_Location": "Armor Location",
-  "MYTHRAS.Type": "Type",
-  "MYTHRAS.Description": "Description",
-  "MYTHRAS.Base_Characteristics": "Base Characteristics",
-  "MYTHRAS.Strength": "Strength",
-  "MYTHRAS.Constitution": "Constitution",
-  "MYTHRAS.Dexterity": "Dexterity",
-  "MYTHRAS.Intelligence": "Intelligence",
-  "MYTHRAS.Power": "Power",
-  "MYTHRAS.Charisma": "Charisma",
-  "MYTHRAS.Other": "Other",
-  "MYTHRAS.ENC_Penalty": "ENC_Penalty",
-  "MYTHRAS.Trained": "Trained",
-  "MYTHRAS.Fumbled": "Fumbled",
-  "MYTHRAS.TRAINING": "TRAINING",
-  "MYTHRAS.MISC": "MISC",
-  "MYTHRAS.Small": "Small",
-  "MYTHRAS.Large": "Large",
-  "MYTHRAS.Huge": "Huge",
-  "MYTHRAS.Enormous": "Enormous",
-  "MYTHRAS.Beyond_Enormous": "Beyond Enormous",
-  "MYTHRAS.Touch": "Touch",
-  "MYTHRAS.Short": "Short",
-  "MYTHRAS.Medium": "Medium",
-  "MYTHRAS.Long": "Long",
-  "MYTHRAS.Very_Long": "Very Long",
-  "MYTHRAS.Combat_Effects": "Combat Effects",
-  "MYTHRAS.Range2": "Range",
-  "MYTHRAS.Close": "Close",
-  "MYTHRAS.Effective": "Effective",
-  "MYTHRAS.Spell_Level": "Spell_Level",
-  "MYTHRAS.Difficulty": "Difficulty",
-  "MYTHRAS.Skill": "Skill",
-  "MYTHRAS.very_easy_dif": "Very Easy",
-  "MYTHRAS.easy_dif": "Easy",
-  "MYTHRAS.standard_dif": "Standard",
-  "MYTHRAS.hard_dif": "Hard",
-  "MYTHRAS.formidable_dif": "Formidable",
-  "MYTHRAS.herculean_dif": "Herculean",
-  "MYTHRAS.Rolling": "Rolling",
-  "MYTHRAS.roll_result": "Roll",
-  "MYTHRAS.Result": "Result",
-  "MYTHRAS.Rolling_Location": "Rolling Hit Location",
-  "MYTHRAS.Roll2": "Roll",
-  "MYTHRAS.FUMBLE!": "FUMBLE!",
-  "MYTHRAS.FAILURE!": "FAILURE!",
-  "MYTHRAS.SUCCESS!": "SUCCESS!",
-  "MYTHRAS.CRITICAL!": "CRITICAL!"
-}
+{"MYTHRAS.CHARACTER_NAME":"CHARACTER NAME","MYTHRAS.PLAYER_NAME":"PLAYER NAME","MYTHRAS.LUCK_POINTS":"LUCK POINTS","MYTHRAS.MAGIC_POINTS":"MAGIC POINTS","MYTHRAS.EXPERIENCE_ROLLS":"EXPERIENCE ROLLS","MYTHRAS.Character":"Character","MYTHRAS.Combat":"Combat","MYTHRAS.Abilities":"Abilities","MYTHRAS.Spells":"Spells","MYTHRAS.Equipment":"Equipment","MYTHRAS.Journal":"Journal","MYTHRAS.Information":"Information","MYTHRAS.CAREER":"CAREER","MYTHRAS.SOCIAL_CLASS":"SOCIAL CLASS","MYTHRAS.GENDER":"GENDER","MYTHRAS.HANDEDNESS":"HANDEDNESS","MYTHRAS.HOMELAND":"HOMELAND","MYTHRAS.CULTURE":"CULTURE","MYTHRAS.AGE":"AGE","MYTHRAS.HEIGHT":"HEIGHT","MYTHRAS.WEIGHT":"WEIGHT","MYTHRAS.FRAME":"FRAME","MYTHRAS.Fatigue":"Fatigue","MYTHRAS.Fresh":"Fresh","MYTHRAS.Winded":"Winded","MYTHRAS.Tired":"Tired","MYTHRAS.Wearied":"Wearied","MYTHRAS.Exhausted":"Exhausted","MYTHRAS.Debilitated":"Debilitated","MYTHRAS.Incapacitated":"Incapacitated","MYTHRAS.Semi-Conscious":"Semi-Conscious","MYTHRAS.Comatose":"Comatose","MYTHRAS.Dead":"Dead","MYTHRAS.minrecovermsg":" Minutes until Fresh.","MYTHRAS.hoursrecovermsg":" Hours until Fresh.","MYTHRAS.Characteristics":"Characteristics","MYTHRAS.STRENGTH":"STRENGTH","MYTHRAS.CONSTITUTION":"CONSTITUTION","MYTHRAS.SIZE":"SIZE","MYTHRAS.DEXTERITY":"DEXTERITY","MYTHRAS.INTELLIGENCE":"INTELLIGENCE","MYTHRAS.POWER":"POWER","MYTHRAS.CHARISMA":"CHARISMA","MYTHRAS.STR":"STR","MYTHRAS.CON":"CON","MYTHRAS.SIZ":"SIZ","MYTHRAS.DEX":"DEX","MYTHRAS.INT":"INT","MYTHRAS.POW":"POW","MYTHRAS.CHA":"CHA","MYTHRAS.Attributes":"Attributes","MYTHRAS.ACTION_POINTS":"ACTION POINTS","MYTHRAS.DAMAGE_MOD":"DAMAGE MOD","MYTHRAS.EXPERIENCE_MOD":"EXPERIENCE MOD","MYTHRAS.HEALING_RATE":"HEALING RATE","MYTHRAS.INITIATIVE_BONUS":"INITIATIVE BONUS","MYTHRAS.TENACITY":"TENACITY","MYTHRAS.POINTS":"POINTS","MYTHRAS.Movement":"Movement","MYTHRAS.WALK":"WALK","MYTHRAS.RUN":"RUN","MYTHRAS.SPRINT":"SPRINT","MYTHRAS.CLIMB":"CLIMB","MYTHRAS.H._JUMP":"H. JUMP","MYTHRAS.V._JUMP":"V. JUMP","MYTHRAS.SWIM":"SWIM","MYTHRAS.Skills":"Skills","MYTHRAS.Standard_Skills":"Standard Skills","MYTHRAS.Name":"Name","MYTHRAS.Base_Char":"Base Char","MYTHRAS.Roll":"Roll","MYTHRAS.Athletics":"Athletics","MYTHRAS.Boating":"Boating","MYTHRAS.Brawn":"Brawn","MYTHRAS.Conceal":"Conceal","MYTHRAS.Customs":"Customs","MYTHRAS.Dance":"Dance","MYTHRAS.Deceit":"Deceit","MYTHRAS.Drive":"Drive","MYTHRAS.Endurance":"Endurance","MYTHRAS.Evade":"Evade","MYTHRAS.First_Aid":"First Aid","MYTHRAS.Influence":"Influence","MYTHRAS.Insight":"Insight","MYTHRAS.Locale":"Locale","MYTHRAS.Native_Tongue":"Native Tongue","MYTHRAS.Perception":"Perception","MYTHRAS.Ride":"Ride","MYTHRAS.Sing":"Sing","MYTHRAS.Stealth":"Stealth","MYTHRAS.Swim":"Swim","MYTHRAS.Unarmed":"Unarmed","MYTHRAS.Willpower":"Willpower","MYTHRAS.Professional_Skills":"Professional Skills","MYTHRAS.Combat_Styles":"Combat Styles","MYTHRAS.Magic_Skills":"Magic Skills","MYTHRAS.Magic_Skill":"Magic Skill","MYTHRAS.Passions":"Passions","MYTHRAS.New_professionalSkill":"New Professional Skill","MYTHRAS.Source":"Source","MYTHRAS.New_combatStyle":"New Combat Style","MYTHRAS.New_magicSkill":"New Magic Skill","MYTHRAS.New_passion":"New Passion","MYTHRAS.Hit_Locations":"Hit Locations","MYTHRAS.Hit_Location":"Hit Location","MYTHRAS.Armor_Penalty":"Armor Penalty","MYTHRAS.Location":"Location","MYTHRAS.Range":"Range","MYTHRAS.Armor":"Armor","MYTHRAS.AP":"AP","MYTHRAS.HP":"HP","MYTHRAS.Right_Leg":"Right Leg","MYTHRAS.Left_Leg":"Left Leg","MYTHRAS.Abdomen":"Abdomen","MYTHRAS.Chest":"Chest","MYTHRAS.Right_Arm":"Right Arm","MYTHRAS.Left_Arm":"Left Arm","MYTHRAS.Head":"Head","MYTHRAS.Resistances":"Resistances","MYTHRAS.Wounds_and_Conditions":"Wounds and Conditions","MYTHRAS.Traits":"Traits","MYTHRAS.New_melee-weapon":"New Melee Weapon","MYTHRAS.New_ranged-weapon":"New Ranged Weapon","MYTHRAS.New_armor":"New Armor","MYTHRAS.New_equipment":"New Equipment","MYTHRAS.New_currency":"New Currency","MYTHRAS.New_cyberModule":"New Cybernetic Module","MYTHRAS.Weapons":"Weapons","MYTHRAS.Melee_Weapons":"Melee Weapons","MYTHRAS.Damage":"Damage","MYTHRAS.DM":"DM","MYTHRAS.Size":"Size","MYTHRAS.Reach":"Reach","MYTHRAS.AP/HP":"AP/HP","MYTHRAS.Ranged_Weapons":"Ranged Weapons","MYTHRAS.Force":"Force","MYTHRAS.Impale_Size":"Impale Size","MYTHRAS.Load":"Load","MYTHRAS.Ammo":"Ammo","MYTHRAS.Current_ENC":"Current ENC","MYTHRAS.Normal_Cap":"Normal Cap","MYTHRAS.Burdened_Cap":"Burdened Cap","MYTHRAS.Overloaded_Cap":"Overloaded Cap","MYTHRAS.Items":"Items","MYTHRAS.ENC":"ENC","MYTHRAS.Quantity":"Quantity","MYTHRAS.Currency_and_Wealth":"Currency and Wealth","MYTHRAS.Value":"Value","MYTHRAS.Equipped":"Equipped","MYTHRAS.Encumbrance":"Encumbrance","MYTHRAS.Armor_Location":"Armor Location","MYTHRAS.Type":"Type","MYTHRAS.Description":"Description","MYTHRAS.Base_Characteristics":"Base Characteristics","MYTHRAS.Strength":"Strength","MYTHRAS.Constitution":"Constitution","MYTHRAS.Dexterity":"Dexterity","MYTHRAS.Intelligence":"Intelligence","MYTHRAS.Power":"Power","MYTHRAS.Charisma":"Charisma","MYTHRAS.Other":"Other","MYTHRAS.ENC_Penalty":"ENC_Penalty","MYTHRAS.Trained":"Trained","MYTHRAS.Fumbled":"Fumbled","MYTHRAS.TRAINING":"TRAINING","MYTHRAS.MISC":"MISC","MYTHRAS.Small":"Small","MYTHRAS.Large":"Large","MYTHRAS.Huge":"Huge","MYTHRAS.Enormous":"Enormous","MYTHRAS.Beyond_Enormous":"Beyond Enormous","MYTHRAS.Touch":"Touch","MYTHRAS.Short":"Short","MYTHRAS.Medium":"Medium","MYTHRAS.Long":"Long","MYTHRAS.Very_Long":"Very Long","MYTHRAS.Combat_Effects":"Combat Effects","MYTHRAS.Range2":"Range","MYTHRAS.Close":"Close","MYTHRAS.Effective":"Effective","MYTHRAS.Spell_Level":"Spell_Level","MYTHRAS.Difficulty":"Difficulty","MYTHRAS.Skill":"Skill","MYTHRAS.very_easy_dif":"Very Easy","MYTHRAS.easy_dif":"Easy","MYTHRAS.standard_dif":"Standard","MYTHRAS.hard_dif":"Hard","MYTHRAS.formidable_dif":"Formidable","MYTHRAS.herculean_dif":"Herculean","MYTHRAS.Rolling":"Rolling","MYTHRAS.roll_result":"Roll","MYTHRAS.Result":"Result","MYTHRAS.Rolling_Location":"Rolling Hit Location","MYTHRAS.Roll2":"Roll","MYTHRAS.FUMBLE!":"FUMBLE!","MYTHRAS.FAILURE!":"FAILURE!","MYTHRAS.SUCCESS!":"SUCCESS!","MYTHRAS.CRITICAL!":"CRITICAL!","MYTHRAS.Carried":"Carried","MYTHRAS.Storage":"Storage","MYTHRAS.Storages":"Storages","MYTHRAS.New_storage":"New Storage","MYTHRAS.No_Storage":"Equipped","MYTHRAS.Max_ENC":"Max. ENC","MYTHRAS.Max_Encumbrance":"Max. Encumbrance","MYTHRAS.Cult_Brotherhood":"Cult/Brotherhood","MYTHRAS.Cults_Brotherhoods":"Cults & Brotherhoods","MYTHRAS.Rank":"Rank","MYTHRAS.Ranks":"Ranks","MYTHRAS.Rank_Name0":"Common","MYTHRAS.Rank_Name1":"Dedicated","MYTHRAS.Rank_Name2":"Proven","MYTHRAS.Rank_Name3":"Overseer","MYTHRAS.Rank_Name4":"Leader","MYTHRAS.Current_Rank":"Current Rank","MYTHRAS.Create":"Crete","MYTHRAS.New_cultBrotherhood":"Cult/Brotherhood","MYTHRAS.Magic_Skill_Type":"Magic Skill Type","MYTHRAS.Folk_Magic":"Folk Magic","MYTHRAS.Trance":"Trance","MYTHRAS.Binding":"Binding","MYTHRAS.Meditation":"Meditation","MYTHRAS.Mysticism":"Mysticism","MYTHRAS.Invocation":"Invocation","MYTHRAS.Shaping":"Shaping","MYTHRAS.Devotion":"Devotion","MYTHRAS.Exhort":"Exhort","MYTHRAS.Intensity":"Intensity","MYTHRAS.Magnitude":"Magnitude","MYTHRAS.Spirits_Bounded":"Spirits Bounded","MYTHRAS.Spirit_Bounded_Pow":"Spirit Bounded POW","MYTHRAS.Combined_Talent_Intensity":"Combined Intensity","MYTHRAS.Shaping_Points":"Shaping Points","MYTHRAS.Devotional_Pool":"Devotional Pool","MYTHRAS.New_spell":"New Spell","MYTHRAS.Common":"Common","MYTHRAS.Rare":"Rare","MYTHRAS.Classified":"Classified","MYTHRAS.SPACE.HOME_WORLD":"HOME WORLD","MYTHRAS.SPACE.GUNNERY":"Gunnery","MYTHRAS.SPACE.POWER_POINTS":"POWER POINTS","MYTHRAS.SPACE.Power_Skills":"Psionic Powers","MYTHRAS.SPACE.SOCIAL_CIRCLES":"Social Circles","MYTHRAS.SPACE.CyberModule":"Cybernetic Modules","MYTHRAS.SPACE.CyberModuleSize":"Slots","MYTHRAS.SPACE.CyberModuleInstalled":"Installed","MYTHRAS.SPACE.CyberModuleEnabled":"Aktive","MYTHRAS.SPACE.Availibility":"Availibility","SETTINGS.gameThemeName":"Game Theme","SETTINGS.gameThemeHint":"Configure the setting for your game. This influences sheet layout and design.","SETTINGS.gameThemeMythras":"Mythras classic","SETTINGS.gameThemeSpace":"M-Space"}
