--- a/lang/es.json
+++ b/lang/es.json
@@ -1,234 +1,258 @@
 {
-  "MYTHRAS.CHARACTER_NAME": "NOMBRE DEL PERSONAJE",
-  "MYTHRAS.PLAYER_NAME": "NOMBRE DEL JUGADOR",
-  "MYTHRAS.LUCK_POINTS": "PUNTOS DE SUERTE",
-  "MYTHRAS.MAGIC_POINTS": "PUNTOS DE MAGIA",
-  "MYTHRAS.EXPERIENCE_ROLLS": "TIRADAS DE EXPERIENCIA",
-  "MYTHRAS.Character": "Personaje",
-  "MYTHRAS.Combat": "Combate",
-  "MYTHRAS.Abilities": "Capacidades",
-  "MYTHRAS.Spells": "Hechizos",
-  "MYTHRAS.Equipment": "Equipo",
-  "MYTHRAS.Journal": "Diario",
-  "MYTHRAS.Information": "Información",
-  "MYTHRAS.CAREER": "CARRERA",
-  "MYTHRAS.HOMELAND": "PATRIA",
-  "MYTHRAS.SOCIAL_CLASS": "CLASE SOCIAL",
-  "MYTHRAS.CULTURE": "CULTURA",
-  "MYTHRAS.GENDER": "GÉNERO",
-  "MYTHRAS.AGE": "EDAD",
-  "MYTHRAS.HEIGHT": "ALTURA",
-  "MYTHRAS.WEIGHT": "PESO",
-  "MYTHRAS.HANDEDNESS": "MANO HÁBIL",
-  "MYTHRAS.FRAME": "COMPLEXIÓN",
-  "MYTHRAS.Fatigue": "Fatiga",
-  "MYTHRAS.Fresh": "Fresco",
-  "MYTHRAS.Winded": "Fatigado",
-  "MYTHRAS.Tired": "Cansado",
-  "MYTHRAS.Wearied": "Agotado",
-  "MYTHRAS.Exhausted": "Exhausto",
-  "MYTHRAS.Debilitated": "Debilitado",
-  "MYTHRAS.Incapacitated": "Incapacitado",
-  "MYTHRAS.Semi-Conscious": "Semi-consciente",
-  "MYTHRAS.Comatose": "Comatoso",
-  "MYTHRAS.Dead": "Muerto",
-  "MYTHRAS.minrecovermsg": " Minutos hasta estar fresco.",
-  "MYTHRAS.hoursrecovermsg": " Horas hasta estar fresco.",
-  "MYTHRAS.Characteristics": "Características",
-  "MYTHRAS.STRENGTH": "FUERZA",
-  "MYTHRAS.CONSTITUTION": "CONSTITUCIÓN",
-  "MYTHRAS.SIZE": "TAMAÑO",
-  "MYTHRAS.DEXTERITY": "DESTREZA",
-  "MYTHRAS.INTELLIGENCE": "INTELIGENCIA",
-  "MYTHRAS.POWER": "PODER",
-  "MYTHRAS.CHARISMA": "CARISMA",
-  "MYTHRAS.STR": "FUE",
-  "MYTHRAS.CON": "CON",
-  "MYTHRAS.SIZ": "TAM",
-  "MYTHRAS.DEX": "DES",
-  "MYTHRAS.INT": "INT",
-  "MYTHRAS.POW": "POD",
-  "MYTHRAS.CHA": "CAR",
-  "MYTHRAS.Attributes": "Atributos",
-  "MYTHRAS.ACTION_POINTS": "PUNTOS ACCIÓN",
-  "MYTHRAS.DAMAGE_MOD": "MOD. DAÑO",
-  "MYTHRAS.EXPERIENCE_MOD": "MOD. EXPERIENCIA",
-  "MYTHRAS.HEALING_RATE": "RITMO CURACIÓN",
-  "MYTHRAS.INITIATIVE_BONUS": "BONO DE INICIATIVA",
-  "MYTHRAS.POINTS": "PUNTOS",
-  "MYTHRAS.Movement": "Movimiento",
-  "MYTHRAS.WALK": "ANDAR",
-  "MYTHRAS.RUN": "CORRER",
-  "MYTHRAS.SPRINT": "ESPRINT",
-  "MYTHRAS.CLIMB": "TREPAR",
-  "MYTHRAS.H._JUMP": "SALTO H.",
-  "MYTHRAS.V._JUMP": "SALTO V.",
-  "MYTHRAS.SWIM": "NADAR",
-  "MYTHRAS.Skills": "Habilidades",
-  "MYTHRAS.Standard_Skills": "Habilidades Básicas",
-  "MYTHRAS.Name": "Nombre",
-  "MYTHRAS.Base_Char": "Car. Base",
-  "MYTHRAS.Roll": "Tirada",
-  "MYTHRAS.Athletics": "Atletismo",
-  "MYTHRAS.Boating": "Manejo de Botes",
-  "MYTHRAS.Brawn": "Músculo",
-  "MYTHRAS.Conceal": "Ocultar",
-  "MYTHRAS.Customs": "Costumbres",
-  "MYTHRAS.Dance": "Bailar",
-  "MYTHRAS.Deceit": "Engañar",
-  "MYTHRAS.Drive": "Conducir",
-  "MYTHRAS.Endurance": "Aguante",
-  "MYTHRAS.Evade": "Evadir",
-  "MYTHRAS.First_Aid": "Primeros Auxilios",
-  "MYTHRAS.Influence": "Influencia",
-  "MYTHRAS.Insight": "Perspicacia",
-  "MYTHRAS.Locale": "Conocimiento Local",
-  "MYTHRAS.Native_Tongue": "Lengua Materna",
-  "MYTHRAS.Perception": "Percepción",
-  "MYTHRAS.Ride": "Montar",
-  "MYTHRAS.Sing": "Cantar",
-  "MYTHRAS.Stealth": "Sigilo",
-  "MYTHRAS.Swim": "Nadar",
-  "MYTHRAS.Unarmed": "Pelea",
-  "MYTHRAS.Willpower": "Voluntad",
-  "MYTHRAS.Professional_Skills": "Habilidades Profesionales",
-  "MYTHRAS.Combat_Styles": "Estilos de Combate",
-  "MYTHRAS.Magic_Skills": "Habilidades Mágicas",
-  "MYTHRAS.Magic_Skill": "Habilidad Mágica",
-  "MYTHRAS.Passions": "Pasiones",
-  "MYTHRAS.New_professionalSkill": "Nueva Habilidad Profesional",
-  "MYTHRAS.Source": "Fuente",
-  "MYTHRAS.New_combatStyle": "Nuevo Estilo de Combate",
-  "MYTHRAS.New_magicSkill": "Nueva Habilidad Mágica",
-  "MYTHRAS.New_passion": "Nueva Pasión",
-  "MYTHRAS.Hit_Locations": "Localizaciones",
-  "MYTHRAS.Armor_Penalty": "Penalización por Armadura",
-  "MYTHRAS.Location": "Localización",
-  "MYTHRAS.Range": "Distancia",
-  "MYTHRAS.Armor": "Armadura",
-  "MYTHRAS.AP": "PA",
-  "MYTHRAS.HP": "PG",
-  "MYTHRAS.Right_Leg": "Pierna Derecha",
-  "MYTHRAS.Left_Leg": "Pierna Izquierda",
   "MYTHRAS.Abdomen": "Abdomen",
-  "MYTHRAS.Chest": "Pecho",
-  "MYTHRAS.Right_Arm": "Brazo Derecho",
-  "MYTHRAS.Left_Arm": "Brazo Izquierdo",
-  "MYTHRAS.Head": "Cabeza",
-  "MYTHRAS.Resistances": "Resistencias",
-  "MYTHRAS.Wounds_and_Conditions": "Heridas y Aflicciones",
-  "MYTHRAS.Traits": "Rasgos",
-  "MYTHRAS.Weapons": "Armas",
-  "MYTHRAS.Melee_Weapons": "Armas Cuerpo a Cuerpo",
-  "MYTHRAS.Damage": "Daño",
-  "MYTHRAS.DM": "MD",
-  "MYTHRAS.Size": "Tamaño",
-  "MYTHRAS.Reach": "Alcance",
-  "MYTHRAS.AP/HP": "PA/PG",
-  "MYTHRAS.Ranged_Weapons": "Armas a Distancia",
-  "MYTHRAS.Force": "Potencia",
-  "MYTHRAS.Impale_Size": "Tamaño de Empalamiento",
-  "MYTHRAS.Load": "Recarga",
+  "MYTHRAS.Abilities": "Capacidades",
+  "MYTHRAS.ACTION_POINTS": "PTOS. ACCIÓN",
+  "MYTHRAS.AGE": "EDAD",
   "MYTHRAS.Ammo": "Munición",
-  "MYTHRAS.New_melee-weapon": "Nueva Arma Cuerpo a Cuerpo",
-  "MYTHRAS.New_ranged-weapon": "Nueva Arma a Distancia",
-  "MYTHRAS.New_armor": "Nueva Armadura",
-  "MYTHRAS.New_equipment": "Nuevo Equipo",
-  "MYTHRAS.New_currency": "Nueva Moneda",
-  "MYTHRAS.Current_ENC": "CAR Actual",
-  "MYTHRAS.Normal_Cap": "Ligero",
+  "MYTHRAS.AP/HP": "PA/PG",
+  "MYTHRAS.AP": "PA",
+  "MYTHRAS.Armor": "Armadura",
+  "MYTHRAS.Armor_Location": "Localización de la armadura",
+  "MYTHRAS.Armor_Penalty": "Penalización por armadura",
+  "MYTHRAS.Athletics": "Atletismo",
+  "MYTHRAS.Attributes": "Atributos",
+  "MYTHRAS.Base_Characteristics": "Características base",
+  "MYTHRAS.Base_Char": "Car. base",
+  "MYTHRAS.Beyond_Enormous": "Más que descomunal",
+  "MYTHRAS.Binding": "Atadura",
+  "MYTHRAS.Boating": "Manejo de botes",
+  "MYTHRAS.Brawn": "Músculo",
+  "MYTHRAS.Burdened": "Cargado",
   "MYTHRAS.Burdened_Cap": "Cargado",
-  "MYTHRAS.Overloaded_Cap": "Sobrecargado",
-  "MYTHRAS.Items": "Objetos",
-  "MYTHRAS.ENC": "CAR",
-  "MYTHRAS.Quantity": "Cantidad",
-  "MYTHRAS.Currency_and_Wealth": "Dinero y Riquezas",
-  "MYTHRAS.Value": "Valor",
-  "MYTHRAS.Equipped": "Equipado",
-  "MYTHRAS.Encumbrance": "Carga",
-  "MYTHRAS.Armor_Location": "Localización de la Armadura",
-  "MYTHRAS.Type": "Tipo",
-  "MYTHRAS.Description": "Descripción",
-  "MYTHRAS.Base_Characteristics": "Características Base",
-  "MYTHRAS.Strength": "Fuerza",
-  "MYTHRAS.Constitution": "Constitución",
-  "MYTHRAS.Dexterity": "Destreza",
-  "MYTHRAS.Intelligence": "Inteligencia",
-  "MYTHRAS.Power": "Poder",
-  "MYTHRAS.Charisma": "Carisma",
-  "MYTHRAS.Other": "Otro",
-  "MYTHRAS.ENC_Penalty": "Penalización por Carga",
-  "MYTHRAS.Trained": "Entrenada",
-  "MYTHRAS.Fumbled": "Pifiada",
-  "MYTHRAS.TRAINING": "Entrenada",
-  "MYTHRAS.MISC": "MISC",
-  "MYTHRAS.Small": "Pequeño",
-  "MYTHRAS.Large": "Grande",
-  "MYTHRAS.Huge": "Enorme",
-  "MYTHRAS.Enormous": "Descomunal",
-  "MYTHRAS.Beyond_Enormous": "> Descomunal",
-  "MYTHRAS.Touch": "Toque",
-  "MYTHRAS.Short": "Corto",
-  "MYTHRAS.Medium": "Medio",
-  "MYTHRAS.Long": "Largo",
-  "MYTHRAS.Very_Long": "Muy Largo",
-  "MYTHRAS.Combat_Effects": "Efectos de Combate",
-  "MYTHRAS.Range2": "Rango",
-  "MYTHRAS.Close": "Cercano",
-  "MYTHRAS.Effective": "Efectivo",
-  "MYTHRAS.Spell_Level": "Nivel del Hechizo",
-  "MYTHRAS.Difficulty": "Dificultad",
-  "MYTHRAS.Skill": "Habilidad",
-  "MYTHRAS.very_easy_dif": "Muy fácil",
-  "MYTHRAS.easy_dif": "Fácil",
-  "MYTHRAS.standard_dif": "Normal",
-  "MYTHRAS.hard_dif": "Difícil",
-  "MYTHRAS.formidable_dif": "Formidable",
-  "MYTHRAS.herculean_dif": "Hercúleo",
-  "MYTHRAS.Rolling": "Tirada de",
-  "MYTHRAS.Result": "Resultado",
-  "MYTHRAS.roll_result": "Resultado",
-  "MYTHRAS.Rolling_Location": "Determinando la localización",
-  "MYTHRAS.Roll2": "Tira",
-  "MYTHRAS.FUMBLE!": "¡Pifia!",
-  "MYTHRAS.FAILURE!": "¡Fallo!",
-  "MYTHRAS.SUCCESS!": "¡Éxito!",
-  "MYTHRAS.CRITICAL!": "¡Crítico!",
+  "MYTHRAS.CAREER": "CARRERA",
   "MYTHRAS.Carried": "Portado",
-  "MYTHRAS.Storage": "Contenedor",
-  "MYTHRAS.Storages": "Contenedores",
-  "MYTHRAS.New_storage": "Nuevo Contenedor",
-  "MYTHRAS.No_Storage": "Equipado",
-  "MYTHRAS.Max_ENC": "Max. Car",
-  "MYTHRAS.Max_Encumbrance": "Max. Carga",
+  "MYTHRAS.CHA": "CAR",
+  "MYTHRAS.Character": "Personaje",
+  "MYTHRAS.Characteristics": "Características",
+  "MYTHRAS.CHARACTER_NAME": "NOMBRE DEL PERSONAJE",
+  "MYTHRAS.Charisma": "Carisma",
+  "MYTHRAS.CHARISMA": "CARISMA",
+  "MYTHRAS.Chest": "Pecho",
+  "MYTHRAS.Classified": "Clasificado",
+  "MYTHRAS.CLIMB": "TREPAR",
+  "MYTHRAS.Close": "Cercano",
+  "MYTHRAS.Comatose": "Comatoso",
+  "MYTHRAS.Combat": "Combate",
+  "MYTHRAS.Combat_Effects": "Efectos de combate",
+  "MYTHRAS.Combat_Styles": "Estilos de combate",
+  "MYTHRAS.Combined_Talent_Intensity": "Intensidad acumulada",
+  "MYTHRAS.Common": "Común",
+  "MYTHRAS.Conceal": "Ocultar",
+  "MYTHRAS.CON": "CON",
+  "MYTHRAS.Constitution": "Constitución",
+  "MYTHRAS.CONSTITUTION": "CONSTITUCIÓN",
+  "MYTHRAS.Create": "Crear",
+  "MYTHRAS.CRITICAL!": "¡Crítico!",
   "MYTHRAS.Cult_Brotherhood": "Culto/Hermandad",
-  "MYTHRAS.Cults_Brotherhoods": "Cultos y Hermandades",
-  "MYTHRAS.Rank": "Rango",
-  "MYTHRAS.Ranks": "Rangos",
-  "MYTHRAS.Rank_Name0": "Miembro Común",
-  "MYTHRAS.Rank_Name1": "Miembro Dedicado",
-  "MYTHRAS.Rank_Name2": "Miembro Probado",
+  "MYTHRAS.Cults_Brotherhoods": "Cultos y hermandades",
+  "MYTHRAS.CULTURE": "CULTURA",
+  "MYTHRAS.Currency_and_Wealth": "Dinero y riquezas",
+  "MYTHRAS.Current_ENC": "CAR actual",
+  "MYTHRAS.Current_Rank": "Rango actual",
+  "MYTHRAS.Customs": "Costumbres",
+  "MYTHRAS.Damage": "Daño",
+  "MYTHRAS.DAMAGE_MOD": "MOD. DAÑO",
+  "MYTHRAS.Dance": "Bailar",
+  "MYTHRAS.Dead": "Muerto",
+  "MYTHRAS.Debilitated": "Debilitado",
+  "MYTHRAS.Deceit": "Engañar",
+  "MYTHRAS.Description": "Descripción",
+  "MYTHRAS.Devotional_Pool": "Reserva devocional",
+  "MYTHRAS.Devotion": "Devoción",
+  "MYTHRAS.DEX": "DES",
+  "MYTHRAS.Dexterity": "Destreza",
+  "MYTHRAS.DEXTERITY": "DESTREZA",
+  "MYTHRAS.Difficulty": "Dificultad",
+  "MYTHRAS.DM": "MD",
+  "MYTHRAS.Drive": "Conducir",
+  "MYTHRAS.easy_dif": "Fácil",
+  "MYTHRAS.Effective": "Efectivo",
+  "MYTHRAS.ENC": "CAR",
+  "MYTHRAS.ENC_Penalty": "Penalización por carga",
+  "MYTHRAS.Encumbrance": "Carga",
+  "MYTHRAS.Endurance": "Aguante",
+  "MYTHRAS.Enormous": "Descomunal",
+  "MYTHRAS.Equipment": "Equipo",
+  "MYTHRAS.Equipped": "Equipado",
+  "MYTHRAS.Evade": "Evadir",
+  "MYTHRAS.Exhausted": "Exhausto",
+  "MYTHRAS.Exhort": "Exhortación",
+  "MYTHRAS.EXPERIENCE_MOD": "MOD. EXPERIENCIA",
+  "MYTHRAS.EXPERIENCE_ROLLS": "EXPERIENCIA",
+  "MYTHRAS.FAILURE!": "¡Fallo!",
+  "MYTHRAS.Fatigue": "Fatiga",
+  "MYTHRAS.First_Aid": "Primeros auxilios",
+  "MYTHRAS.Folk_Magic": "Magia común",
+  "MYTHRAS.Force": "Potencia",
+  "MYTHRAS.formidable_dif": "Formidable",
+  "MYTHRAS.FRAME": "COMPLEXIÓN",
+  "MYTHRAS.Fresh": "Fresco",
+  "MYTHRAS.Fumbled": "Pifiada",
+  "MYTHRAS.FUMBLE!": "¡Pifia!",
+  "MYTHRAS.GENDER": "GÉNERO",
+  "MYTHRAS.HANDEDNESS": "MANO HÁBIL",
+  "MYTHRAS.hard_dif": "Difícil",
+  "MYTHRAS.Head": "Cabeza",
+  "MYTHRAS.HEALING_RATE": "RITMO CURACIÓN",
+  "MYTHRAS.HEIGHT": "ALTURA",
+  "MYTHRAS.herculean_dif": "Hercúleo",
+  "MYTHRAS.Hit_Location": "Localización",
+  "MYTHRAS.Hit_Locations": "Localizaciones",
+  "MYTHRAS.H._JUMP": "SALTO H.",
+  "MYTHRAS.HOMELAND": "PATRIA",
+  "MYTHRAS.hoursrecovermsg": " Horas hasta estar fresco.",
+  "MYTHRAS.HP": "PG",
+  "MYTHRAS.Huge": "Enorme",
+  "MYTHRAS.Impale_Size": "Tamaño de empalamiento",
+  "MYTHRAS.Incapacitated": "Incapacitado",
+  "MYTHRAS.Influence": "Influencia",
+  "MYTHRAS.Information": "Información",
+  "MYTHRAS.INITIATIVE_BONUS": "BONO DE INICIATIVA",
+  "MYTHRAS.Insight": "Perspicacia",
+  "MYTHRAS.Intelligence": "Inteligencia",
+  "MYTHRAS.INTELLIGENCE": "INTELIGENCIA",
+  "MYTHRAS.Intensity": "Intensidad",
+  "MYTHRAS.INT": "INT",
+  "MYTHRAS.Invocation": "Invocación",
+  "MYTHRAS.Items": "Objetos",
+  "MYTHRAS.Journal": "Diario",
+  "MYTHRAS.Large": "Grande",
+  "MYTHRAS.Left_Arm": "Brazo izquierdo",
+  "MYTHRAS.Left_Leg": "Pierna izquierda",
+  "MYTHRAS.Load": "Recarga",
+  "MYTHRAS.Locale": "Conocimiento local",
+  "MYTHRAS.Location": "Localización",
+  "MYTHRAS.Long": "Largo",
+  "MYTHRAS.LUCK_POINTS": "PTOS. SUERTE",
+  "MYTHRAS.MAGIC_POINTS": "PTOS. MAGIA",
+  "MYTHRAS.Magic_Skill": "Habilidad mágica",
+  "MYTHRAS.Magic_Skills": "Habilidades mágicas",
+  "MYTHRAS.Magic_Skill_Type": "Tipo habilidad mágica",
+  "MYTHRAS.Magnitude": "Magnitud",
+  "MYTHRAS.Max Load": "Peso máximo",
+  "MYTHRAS.Max_ENC": "Max. CAR",
+  "MYTHRAS.Max_Encumbrance": "Max. carga",
+  "MYTHRAS.Meditation": "Meditación",
+  "MYTHRAS.Medium": "Medio",
+  "MYTHRAS.Melee_Weapons": "Armas cuerpo a cuerpo",
+  "MYTHRAS.minrecovermsg": " Minutos hasta estar fresco.",
+  "MYTHRAS.MISC": "MISC",
+  "MYTHRAS.Movement": "Movimiento",
+  "MYTHRAS.Mysticism": "Misticismo",
+  "MYTHRAS.Name": "Nombre",
+  "MYTHRAS.Native_Tongue": "Lengua materna",
+  "MYTHRAS.Natural_AP": "PA naturales",
+  "MYTHRAS.New_armor": "Nueva armadura",
+  "MYTHRAS.New_combatStyle": "Nuevo estilo de combate",
+  "MYTHRAS.New_cultBrotherhood": "Culto/Hermandad",
+  "MYTHRAS.New_currency": "Nueva moneda",
+  "MYTHRAS.New_cyberModule": "Nuevo módulo cibernético",
+  "MYTHRAS.New_equipment": "Nuevo equipo",
+  "MYTHRAS.New_magicSkill": "Nueva habilidad mágica",
+  "MYTHRAS.New_melee-weapon": "Nueva arma cuerpo a cuerpo",
+  "MYTHRAS.New_passion": "Nueva pasión",
+  "MYTHRAS.New_professionalSkill": "Nueva habilidad profesional",
+  "MYTHRAS.New_ranged-weapon": "Nueva arma a distancia",
+  "MYTHRAS.New_spell": "Nuevo hechizo",
+  "MYTHRAS.New_storage": "Nuevo almacenamiento",
+  "MYTHRAS.Normal_Cap": "Ligero",
+  "MYTHRAS.No_Storage": "Equipado",
+  "MYTHRAS.Other": "Otro",
+  "MYTHRAS.Overloaded": "Sobrecargado",
+  "MYTHRAS.Overloaded_Cap": "Sobrecargado",
+  "MYTHRAS.Passions": "Pasiones",
+  "MYTHRAS.Perception": "Percepción",
+  "MYTHRAS.PLAYER_NAME": "NOMBRE DEL JUGADOR",
+  "MYTHRAS.POINTS": "PUNTOS",
+  "MYTHRAS.Power": "Poder",
+  "MYTHRAS.POWER": "PODER",
+  "MYTHRAS.POW": "POD",
+  "MYTHRAS.Professional_Skills": "Habilidades profesionales",
+  "MYTHRAS.Quantity": "Cantidad",
+  "MYTHRAS.Range2": "Rango",
+  "MYTHRAS.Range": "Distancia",
+  "MYTHRAS.Ranged_Weapons": "Armas a distancia",
+  "MYTHRAS.Rank_Name0": "Miembro común",
+  "MYTHRAS.Rank_Name1": "Miembro dedicado",
+  "MYTHRAS.Rank_Name2": "Miembro probado",
   "MYTHRAS.Rank_Name3": "Supervisor",
   "MYTHRAS.Rank_Name4": "Líder",
-  "MYTHRAS.Current_Rank": "Rango Actual",
-  "MYTHRAS.Create": "Crear",
-  "MYTHRAS.New_cultBrotherhood": "Culto/Hermandad",
-  "MYTHRAS.Magic_Skill_Type": "Tipo Habilidad Mágica",
-  "MYTHRAS.Folk_Magic": "Magia Común",
-  "MYTHRAS.Trance": "Trance",
-  "MYTHRAS.Binding": "Atadura",
-  "MYTHRAS.Meditation": "Meditación",
-  "MYTHRAS.Mysticism": "Misticismo",
-  "MYTHRAS.Invocation": "Invocación",
+  "MYTHRAS.Rank": "Rango",
+  "MYTHRAS.Ranks": "Rangos",
+  "MYTHRAS.Rare": "Raro",
+  "MYTHRAS.Reach": "Alcance",
+  "MYTHRAS.Resistances": "Resistencias",
+  "MYTHRAS.Result": "Resultado",
+  "MYTHRAS.Ride": "Montar",
+  "MYTHRAS.Right_Arm": "Brazo derecho",
+  "MYTHRAS.Right_Leg": "Pierna derecha",
+  "MYTHRAS.Roll2": "Tira",
+  "MYTHRAS.Rolling_Location": "Determinando la localización",
+  "MYTHRAS.Rolling": "Tirada de",
+  "MYTHRAS.roll_result": "Resultado",
+  "MYTHRAS.Roll": "Tirada",
+  "MYTHRAS.RUN": "CORRER",
+  "MYTHRAS.Semi-Conscious": "Semi-consciente",
+  "MYTHRAS.Shaping_Points": "Puntos manipulación",
   "MYTHRAS.Shaping": "Manipulación",
-  "MYTHRAS.Devotion": "Devoción",
-  "MYTHRAS.Exhort": "Exhortación",
-  "MYTHRAS.Intensity": "Intensidad",
-  "MYTHRAS.Magnitude": "Magnitud",
-  "MYTHRAS.Spirits_Bounded": "Espíritus Atados",
-  "MYTHRAS.Spirit_Bounded_Pow": "POD Espíritu Atado",
-  "MYTHRAS.Combined_Talent_Intensity": "Intensidad Acumulada",
-  "MYTHRAS.Shaping_Points": "Puntos Manipulación",
-  "MYTHRAS.Devotional_Pool": "Reserva Devocional",
-  "MYTHRAS.Maximums": "Máximos"
+  "MYTHRAS.Short": "Corto",
+  "MYTHRAS.Sing": "Cantar",
+  "MYTHRAS.Size": "Tamaño",
+  "MYTHRAS.SIZE": "TAMAÑO",
+  "MYTHRAS.SIZ": "TAM",
+  "MYTHRAS.Skill": "Habilidad",
+  "MYTHRAS.Skills": "Habilidades",
+  "MYTHRAS.Small": "Pequeño",
+  "MYTHRAS.SOCIAL_CLASS": "CLASE SOCIAL",
+  "MYTHRAS.Source": "Fuente",
+  "MYTHRAS.SPACE.Availibility": "Disponibilidad",
+  "MYTHRAS.SPACE.CyberModule": "Módulos cibernéticos",
+  "MYTHRAS.SPACE.CyberModuleEnabled": "Aktivo",
+  "MYTHRAS.SPACE.CyberModuleInstalled": "Instalado",
+  "MYTHRAS.SPACE.CyberModuleSize": "Ranuras",
+  "MYTHRAS.SPACE.GUNNERY": "Artillería",
+  "MYTHRAS.SPACE.HOME_WORLD": "PAÍS NATAL",
+  "MYTHRAS.SPACE.POWER_POINTS": "PTOS. PODER",
+  "MYTHRAS.SPACE.Power_Skills": "Poderes psiónicos",
+  "MYTHRAS.SPACE.SOCIAL_CIRCLES": "Círculos sociales",
+  "MYTHRAS.Spell_Level": "Nivel del hechizo",
+  "MYTHRAS.Spells": "Hechizos",
+  "MYTHRAS.Spirit_Bounded_Pow": "POD espíritu atado",
+  "MYTHRAS.Spirits_Bounded": "Espíritus atados",
+  "MYTHRAS.SPRINT": "ESPRINT",
+  "MYTHRAS.standard_dif": "Normal",
+  "MYTHRAS.Standard_Skills": "Habilidades básicas",
+  "MYTHRAS.Stealth": "Sigilo",
+  "MYTHRAS.Storage": "Almacenamiento",
+  "MYTHRAS.Storages": "Almacenamientos",
+  "MYTHRAS.Strength": "Fuerza",
+  "MYTHRAS.STRENGTH": "FUERZA",
+  "MYTHRAS.STR": "FUE",
+  "MYTHRAS.SUCCESS!": "¡Éxito!",
+  "MYTHRAS.Swim": "Nadar",
+  "MYTHRAS.SWIM": "NADAR",
+  "MYTHRAS.TENACITY": "TENACIDAD",
+  "MYTHRAS.Tired": "Cansado",
+  "MYTHRAS.Touch": "Toque",
+  "MYTHRAS.Trained": "Entrenada",
+  "MYTHRAS.TRAINING": "Entrenada",
+  "MYTHRAS.Traits": "Rasgos",
+  "MYTHRAS.Trance": "Trance",
+  "MYTHRAS.Type": "Tipo",
+  "MYTHRAS.Unarmed": "Pelea",
+  "MYTHRAS.Value": "Valor",
+  "MYTHRAS.very_easy_dif": "Muy fácil",
+  "MYTHRAS.Very_Long": "Muy largo",
+  "MYTHRAS.V._JUMP": "SALTO V.",
+  "MYTHRAS.WALK": "ANDAR",
+  "MYTHRAS.Weapons": "Armas",
+  "MYTHRAS.Wearied": "Agotado",
+  "MYTHRAS.WEIGHT": "PESO",
+  "MYTHRAS.Willpower": "Voluntad",
+  "MYTHRAS.Winded": "Fatigado",
+  "MYTHRAS.Wounds_and_Conditions": "Heridas y aflicciones",
+  "SETTINGS.gameThemeHint": "Ajuste el entorno de juego. Afecta al diseño y las hojas de personaje.",
+  "SETTINGS.gameThemeMythras": "Mythras Clásico",
+  "SETTINGS.gameThemeName": "Tema",
+  "SETTINGS.gameThemeSpace": "M-Space"
 }
